--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -65,6 +65,9 @@
     <Compile Include="Assets\Scripts\CardScript.cs" />
     <Compile Include="Assets\Scripts\DamageIndicator.cs" />
     <Compile Include="Assets\Scripts\GameManagerScript.cs" />
+    <Compile Include="Assets\Scripts\PlayerHandFullCard.cs" />
+    <Compile Include="Assets\Scripts\PlayerHandMiniCard.cs" />
+    <Compile Include="Assets\Scripts\PlayerHandScript.cs" />
     <Reference Include="UnityEditor.StandardEvents">
       <HintPath>C:/Linda/Side Projects/Project Sunrise/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
     </Reference>
